Added some OO principles for interview.

--- a/RestaurantReviews/appsettings.json
+++ b/RestaurantReviews/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RestaurantReviews-F192B808-AAE2-4847-8895-9C125988CA6F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RestaurantReviews-F192B808-AAE2-4847-8895-9C125988CA6F;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
